book cover section now toggles back and forth from mobile to desktop

--- a/static/base.html
+++ b/static/base.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Siri in the Uncanny Valley</title>
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
   </head>
   <body>
-    <div class="testing">
-      Siri in the Uncanny Valley
-      <br>By Jack Connor
-      <br> -Coming Soon-
+    <div class="mobile-title-content">
+      <div class="title">
+        Siri in the Uncanny Valley
+      </div>
+      <div class="author">
+        by Jack Connor
+      </div>
+    </div>
+    <div class="book-cover-container">
+      <div class="book-cover">
+        <img src="./static/images/cartoon.jpg" alt="">
+      </div>
     </div>
   </body>
 </html>
